--- a/internal/translations/locales/fr-CA/out.gotext.json
+++ b/internal/translations/locales/fr-CA/out.gotext.json
@@ -227,6 +227,11 @@
             "translation": "Oui"
         },
         {
+            "id": "🏁 Event is closed. Reopen!",
+            "message": "🏁 Event is closed. Reopen!",
+            "translation": "🏁 L'événement terminé. Rouvrir!"
+        },
+        {
             "id": "📩 Allow Sharing: {SprintfNo}",
             "message": "📩 Allow Sharing: {SprintfNo}",
             "translation": "📩 Autoriser le partage : {SprintfNo}",
@@ -275,6 +280,26 @@
             "id": "⌚ Time Zone",
             "message": "⌚ Time Zone",
             "translation": "⌚ Fuseau horaire"
+        },
+        {
+            "id": "👨‍👩‍👦 Max Guests (+1's): {MaxGuests}",
+            "message": "👨‍👩‍👦 Max Guests (+1's): {MaxGuests}",
+            "translation": "👨‍👩‍👦 Maximum d'invités (+1): {MaxGuests}",
+            "placeholders": [
+                {
+                    "id": "MaxGuests",
+                    "string": "%[1]v",
+                    "type": "int",
+                    "underlyingType": "int",
+                    "argNum": 1,
+                    "expr": "event.MaxGuests()"
+                }
+            ]
+        },
+        {
+            "id": "❌ Close Event",
+            "message": "❌ Close Event",
+            "translation": "❌ Fermer l'événement"
         },
         {
             "id": "🔙 Back",
@@ -590,6 +615,11 @@
             "translation": "L'événement est prêt a être utilisé"
         },
         {
+            "id": "Event is closed, please contact the host for more information.",
+            "message": "Event is closed, please contact the host for more information.",
+            "translation": "L'événement est fermé, veuillez contacter l'hôte pour plus d'informations."
+        },
+        {
             "id": "hosted by",
             "message": "hosted by",
             "translation": "organisé par"
@@ -690,6 +720,11 @@
             "translation": "Peux-tu venir?  Utilise les boutons ci-dessous."
         },
         {
+            "id": "❌️ Event Closed",
+            "message": "❌️ Event Closed",
+            "translation": "❌️ Événement clôturé"
+        },
+        {
             "id": "🐕‍🦺 I'm Suiting",
             "message": "🐕‍🦺 I'm Suiting",
             "translation": "🐕‍🦺 Je fursuit"
@@ -740,14 +775,14 @@
             "translation": "🙋‍♂️ Participe!"
         },
         {
-            "id": "🙋‍♂️🕺 Me +1",
-            "message": "🙋‍♂️🕺 Me +1",
-            "translation": "🙋‍♂️ Moi +1"
+            "id": "Me +1",
+            "message": "Me +1",
+            "translation": "Moi +1"
         },
         {
-            "id": "🙋‍♂️👭 Me +2",
-            "message": "🙋‍♂️👭 Me +2",
-            "translation": "🙋‍♂️ Moi +2"
+            "id": "Guest Names...",
+            "message": "Guest Names...",
+            "translation": "Noms des invités..."
         },
         {
             "id": "🤔️ Maybe",
@@ -777,7 +812,70 @@
         {
             "id": "Not an event you are attending.",
             "message": "Not an event you are attending.",
-            "translation": ""
+            "translation": "Ce n'est pas un événement auquel vous assistez."
+        },
+        {
+            "id": "Sorry, I wasn't able to find the event.  Try again.",
+            "message": "Sorry, I wasn't able to find the event.  Try again.",
+            "translation": "Désolé, je n'ai pas réussi à trouver l'événement. Essayer à nouveau."
+        },
+        {
+            "id": "Sorry, but this event does not allow you to bring any guests.",
+            "message": "Sorry, but this event does not allow you to bring any guests.",
+            "translation": "Désolé, mais cet événement ne vous permet pas d'amener d'invités."
+        },
+        {
+            "id": "Alright, tell me the name of each guest you are bringing to \u003cb\u003e{Name}\u003c/b\u003e. You can bring up to {MaxGuests}.",
+            "message": "Alright, tell me the name of each guest you are bringing to \u003cb\u003e{Name}\u003c/b\u003e. You can bring up to {MaxGuests}.",
+            "translation": "Très bien, dites-moi le nom de chaque invité que vous amenez à \u003cb\u003e{Name}\u003c/b\u003e. Vous pouvez amener jusqu'à {MaxGuests}.",
+            "placeholders": [
+                {
+                    "id": "Name",
+                    "string": "%[1]v",
+                    "type": "string",
+                    "underlyingType": "string",
+                    "argNum": 1,
+                    "expr": "event.Name()"
+                },
+                {
+                    "id": "MaxGuests",
+                    "string": "%[2]v",
+                    "type": "int",
+                    "underlyingType": "int",
+                    "argNum": 2,
+                    "expr": "event.MaxGuests()"
+                }
+            ]
+        },
+        {
+            "id": "Woah, slow down!  Just give me the name of the attendee.",
+            "message": "Woah, slow down!  Just give me the name of the attendee.",
+            "translation": "Waouh, ralentis ! Donnez-moi simplement le nom du participant."
+        },
+        {
+            "id": "Got it.  Who's the next guest?  If that's the last one, click /done.",
+            "message": "Got it.  Who's the next guest?  If that's the last one, click /done.",
+            "translation": "J'ai compris. Qui est le prochain invité ? Si c'est le dernier, cliquez sur /done."
+        },
+        {
+            "id": "You're all set!  I've added those people as your guests at \u003cb\u003e{Name}\u003c/b\u003e. You can now return to the chat you were in previously.\n\nThanks for using the Furry Plans Bot!",
+            "message": "You're all set!  I've added those people as your guests at \u003cb\u003e{Name}\u003c/b\u003e. You can now return to the chat you were in previously.\n\nThanks for using the Furry Plans Bot!",
+            "translation": "Vous êtes prêt! J'ai ajouté ces personnes comme invités sur \u003cb\u003e{Name}\u003c/b\u003e. Vous pouvez maintenant revenir au chat dans lequel vous étiez précédemment.\n\nMerci d'utiliser le robot Furry Plans!",
+            "placeholders": [
+                {
+                    "id": "Name",
+                    "string": "%[1]v",
+                    "type": "string",
+                    "underlyingType": "string",
+                    "argNum": 1,
+                    "expr": "event.Name()"
+                }
+            ]
+        },
+        {
+            "id": "Click here to specify Guest names...",
+            "message": "Click here to specify Guest names...",
+            "translation": "Cliquez ici pour spécifier les noms des invités..."
         },
         {
             "id": "👉 CLICK TO ACTIVATE EVENT 👈",
@@ -807,7 +905,7 @@
         {
             "id": "Selected: {Tz}",
             "message": "Selected: {Tz}",
-            "translation": "",
+            "translation": "Sélectionné: {Tz}",
             "placeholders": [
                 {
                     "id": "Tz",
