--- a/internal/translations/locales/de-DE/messages.gotext.json
+++ b/internal/translations/locales/de-DE/messages.gotext.json
@@ -827,7 +827,7 @@
         {
             "id": "Alright, tell me the name of each guest you are bringing to \u003cb\u003e{Name}\u003c/b\u003e. You can bring up to {MaxGuests}.",
             "message": "Alright, tell me the name of each guest you are bringing to \u003cb\u003e{Name}\u003c/b\u003e. You can bring up to {MaxGuests}.",
-            "translation": "Okay, sagen Sie mir den Namen jedes Gastes, den Sie zu \u003cb\u003e{Name}\u003c/b\u003e mitbringen. Sie können bis zu {MaxGuests} mitbringen.",
+            "translation": "Okay, sagen Sie mir den Namen des ersten Gastes, den Sie zu <b>{Name}</b> mitbringen. Sie können bis zu {MaxGuests} aufrufen.\n\nSchicken Sie mir bitte jeweils einen Namen!",
             "placeholders": [
                 {
                     "id": "Name",
