--- a/internal/translations/locales/fr-CA/messages.gotext.json
+++ b/internal/translations/locales/fr-CA/messages.gotext.json
@@ -827,7 +827,7 @@
         {
             "id": "Alright, tell me the name of each guest you are bringing to \u003cb\u003e{Name}\u003c/b\u003e. You can bring up to {MaxGuests}.",
             "message": "Alright, tell me the name of each guest you are bringing to \u003cb\u003e{Name}\u003c/b\u003e. You can bring up to {MaxGuests}.",
-            "translation": "Très bien, dites-moi le nom de chaque invité que vous amenez à <b>{Name}</b>. Vous pouvez amener jusqu'à {MaxGuests}.",
+            "translation": "Très bien, dites-moi le nom du premier invité que vous amenez à <b>{Name}</b>. Vous pouvez amener jusqu'à {MaxGuests}.\n\nEnvoyez-moi un nom à la fois, s'il vous plaît!",
             "placeholders": [
                 {
                     "id": "Name",
