--- a/internal/translations/locales/en-US/messages.gotext.json
+++ b/internal/translations/locales/en-US/messages.gotext.json
@@ -267,6 +267,13 @@
             "fuzzy": true
         },
         {
+            "id": "🖼 Add Picture",
+            "message": "🖼 Add Picture",
+            "translation": "🖼 Add Picture",
+            "translatorComment": "Copied from source.",
+            "fuzzy": true
+        },
+        {
             "id": "👫 Set Max Attendees",
             "message": "👫 Set Max Attendees",
             "translation": "👫 Max People",
@@ -561,6 +568,20 @@
             "fuzzy": true
         },
         {
+            "id": "Send me a picture that will be included with your event.",
+            "message": "Send me a picture that will be included with your event.",
+            "translation": "Send me a picture that will be included with your event.",
+            "translatorComment": "Copied from source.",
+            "fuzzy": true
+        },
+        {
+            "id": "Current picture:",
+            "message": "Current picture:",
+            "translation": "Current picture:",
+            "translatorComment": "Copied from source.",
+            "fuzzy": true
+        },
+        {
             "id": "Specify the date on which this event takes place:",
             "message": "Specify the date on which this event takes place:",
             "translation": "Specify the date on which this event takes place:",
@@ -626,6 +647,13 @@
             "id": "The value you provided is not one of the choices.",
             "message": "The value you provided is not one of the choices.",
             "translation": "The value you provided is not one of the choices.",
+            "translatorComment": "Copied from source.",
+            "fuzzy": true
+        },
+        {
+            "id": "Please send a picture to go with your event.",
+            "message": "Please send a picture to go with your event.",
+            "translation": "Please send a picture to go with your event.",
             "translatorComment": "Copied from source.",
             "fuzzy": true
         },
@@ -703,6 +731,13 @@
             "id": "Notes:",
             "message": "Notes:",
             "translation": "Notes:",
+            "translatorComment": "Copied from source.",
+            "fuzzy": true
+        },
+        {
+            "id": "🖼 Event includes a picture",
+            "message": "🖼 Event includes a picture",
+            "translation": "🖼 Event includes a picture",
             "translatorComment": "Copied from source.",
             "fuzzy": true
         },
