--- a/internal/translations/locales/fr-CA/messages.gotext.json
+++ b/internal/translations/locales/fr-CA/messages.gotext.json
@@ -197,6 +197,11 @@
             "translation": "📝 Ajouter des notes"
         },
         {
+            "id": "🖼 Add Picture",
+            "message": "🖼 Add Picture",
+            "translation": "\uD83D\uDDBC Ajouter une image"
+        },
+        {
             "id": "👫 Set Max Attendees",
             "message": "👫 Set Max Attendees",
             "translation": "👫 Définir le nombre maximum de participants"
@@ -229,7 +234,7 @@
         {
             "id": "🏁 Event is closed. Reopen!",
             "message": "🏁 Event is closed. Reopen!",
-            "translation": "\uD83C\uDFC1 L'événement terminé. Rouvrir!"
+            "translation": "🏁 L'événement terminé. Rouvrir!"
         },
         {
             "id": "📩 Allow Sharing: {SprintfNo}",
@@ -284,7 +289,7 @@
         {
             "id": "👨‍👩‍👦 Max Guests (+1's): {MaxGuests}",
             "message": "👨‍👩‍👦 Max Guests (+1's): {MaxGuests}",
-            "translation": "\uD83D\uDC68\u200D\uD83D\uDC69\u200D\uD83D\uDC66 Maximum d'invités (+1): {MaxGuests}",
+            "translation": "👨‍👩‍👦 Maximum d'invités (+1): {MaxGuests}",
             "placeholders": [
                 {
                     "id": "MaxGuests",
@@ -437,6 +442,16 @@
             "translation": "Entrer le nom de l'hôte de l'événement"
         },
         {
+            "id": "Send me a picture that will be included with your event.",
+            "message": "Send me a picture that will be included with your event.",
+            "translation": "Envoyez-moi une photo qui sera incluse avec votre événement."
+        },
+        {
+            "id": "Current picture:",
+            "message": "Current picture:",
+            "translation": "Photo actuelle:"
+        },
+        {
             "id": "Specify the date on which this event takes place:",
             "message": "Specify the date on which this event takes place:",
             "translation": "Entrer la date de l'événement:"
@@ -488,6 +503,11 @@
             "id": "The value you provided is not one of the choices.",
             "message": "The value you provided is not one of the choices.",
             "translation": "La valeur fournie ne correspond pas à un choix disponible."
+        },
+        {
+            "id": "Please send a picture to go with your event.",
+            "message": "Please send a picture to go with your event.",
+            "translation": "Veuillez envoyer une photo pour accompagner votre événement."
         },
         {
             "id": "Please provide a valid number",
@@ -543,6 +563,11 @@
             "id": "Notes:",
             "message": "Notes:",
             "translation": "Notes:"
+        },
+        {
+            "id": "🖼 Event includes a picture",
+            "message": "🖼 Event includes a picture",
+            "translation": "\uD83D\uDDBC L'événement comprend une photo"
         },
         {
             "id": "Error listing events: {Err}",
@@ -825,8 +850,8 @@
             "translation": "Désolé, mais cet événement ne vous permet pas d'amener d'invités."
         },
         {
-            "id": "Alright, tell me the name of each guest you are bringing to \u003cb\u003e{Name}\u003c/b\u003e. You can bring up to {MaxGuests}.",
-            "message": "Alright, tell me the name of each guest you are bringing to \u003cb\u003e{Name}\u003c/b\u003e. You can bring up to {MaxGuests}.",
+            "id": "Alright, tell me the name of the first guest you are bringing to \u003cb\u003e{Name}\u003c/b\u003e. You can bring up to {MaxGuests}.\n\nSend me one name at a time, please!",
+            "message": "Alright, tell me the name of the first guest you are bringing to \u003cb\u003e{Name}\u003c/b\u003e. You can bring up to {MaxGuests}.\n\nSend me one name at a time, please!",
             "translation": "Très bien, dites-moi le nom du premier invité que vous amenez à <b>{Name}</b>. Vous pouvez amener jusqu'à {MaxGuests}.\n\nEnvoyez-moi un nom à la fois, s'il vous plaît!",
             "placeholders": [
                 {
@@ -860,7 +885,7 @@
         {
             "id": "You're all set!  I've added those people as your guests at \u003cb\u003e{Name}\u003c/b\u003e. You can now return to the chat you were in previously.\n\nThanks for using the Furry Plans Bot!",
             "message": "You're all set!  I've added those people as your guests at \u003cb\u003e{Name}\u003c/b\u003e. You can now return to the chat you were in previously.\n\nThanks for using the Furry Plans Bot!",
-            "translation": "Vous êtes prêt! J'ai ajouté ces personnes comme invités sur <b>{Name}</b>. Vous pouvez maintenant revenir au chat dans lequel vous étiez précédemment.\n\nMerci d'utiliser le robot Furry Plans!",
+            "translation": "Vous êtes prêt! J'ai ajouté ces personnes comme invités sur \u003cb\u003e{Name}\u003c/b\u003e. Vous pouvez maintenant revenir au chat dans lequel vous étiez précédemment.\n\nMerci d'utiliser le robot Furry Plans!",
             "placeholders": [
                 {
                     "id": "Name",
